[package]
name = "syncookied"
version = "0.2.3"
description = "syn flood protection system"
authors = ["Alexander Polyakov <apolyakov@beget.ru>"]
build = "build.rs"
license = "GPL-2.0"
readme = "README.md"

[dependencies]
libc = "0.2.11"
crossbeam = "0.2.5"
clap = "2.4.0"
lazy_static = "0.2.1"
yaml-rust = "0.3.2"
parking_lot = "0.2.6"
fnv = "1.0.2"
chan-signal = "0.1.6"
log = "0.3.6"
syslog = "3.1.0"
chrono = "0.2.22"

[dependencies.scheduler]
git = "https://github.com/polachok/rust-scheduler"
branch = "portability"

[dependencies.concurrent-hash-map]
git = "https://github.com/polachok/concurrent-hash-map"
branch = "hasher"

[dependencies.influent]
git = "https://github.com/polachok/influent.rs"
branch = "udp+"
default-features = false
features = []

[dependencies.bpfjit]
git = "https://github.com/polachok/bpfjit"
rev = "2debf393d2cb1d7e0a8f9c2d3bb3cedcc17f2c76"

[dependencies.pcap]
git = "https://github.com/polachok/pcap"
branch = "offline-bpf"

[dependencies.bounded-spsc-queue]
git = "https://github.com/polachok/bounded-spsc-queue.git"
branch = "with"

[dependencies.netmap_sys]
version = "0.1.2"
features = [ "netmap_with_libs" ]

[dependencies.pnet]
git = "https://github.com/polachok/libpnet"
branch = "syncookied"
#rev = "8eeb66788"

[build-dependencies]
gcc = "0.3.26"

[profile.release]
debug = true
