[package]
name = "syncookied"
version = "0.3.2"
description = "syn flood protection system"
authors = ["Alexander Polyakov <apolyakov@beget.ru>"]
build = "build.rs"
license = "GPL-2.0"
readme = "README.md"

[features]
sse3 = []
avx = []
default = [ "avx" ]

[dependencies]
libc = "0.2.11"
crossbeam = "0.2.5"
clap = "2.4.0"
lazy_static = "0.2.1"
yaml-rust = "0.3.2"
parking_lot = "0.3.6"
fnv = "1.0.2"
chan-signal = "0.1.6"
log = "0.3.6"
syslog = "3.1.0"
chrono = "0.2.22"
concurrent-hash-map = "0.0.6"
url = "1.2.0"

[dependencies.scheduler]
git = "https://github.com/polachok/rust-scheduler"
branch = "portability"

[dependencies.influent]
git = "https://github.com/polachok/influent.rs"
branch = "udp+"
default-features = false
features = []

[dependencies.bpfjit]
version = "0.1.1"

[dependencies.pcap]
git = "https://github.com/polachok/pcap"
branch = "offline-bpf"

[dependencies.netmap_sys]
version = "0.1.3"
features = [ "netmap_with_libs" ]

[dependencies.pnet]
git = "https://github.com/polachok/libpnet"
#branch = "syncookied"
rev = "f8e20c5b3a080a5f9380450db51d3e68e5f91ab7"
#rev = "8eeb66788"

[build-dependencies]
gcc = "0.3.26"

[profile.release]
debug = true
